resources/testcases_static_checks/tests/positive/isRmfa2/r05.rls
../../../tests_common_data/from-evaluation-section/r05.rls