resources/testcases_static_checks/tests/negative/isRmfa2/r01.rls
../../../tests_common_data/from-evaluation-section/r01.rls